--- a/react/odev2/src/app.css
+++ b/react/odev2/src/app.css
@@ -1,12 +1,12 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background: #f5f5f5;
+    /*background-image: linear-gradient(to right, #051937, #004d7a, #008793, #00bf72, #a8eb12);*/
 }
 
 .app-container {
+    
 }
 
 .todos-container {
+    justify-content: center;
+    align-items: center;
 }
