finish react odev3

--- a/react/odev3/src/App.css
+++ b/react/odev3/src/App.css
@@ -1,3 +1,15 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: 'Anton', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
+
 .App {
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(to right, #051937, #004d7a, #008793, #5056ff, #4b8dff);
 }
 
